practica_2/practica_2/jcc_files/clike.java
/* Generated By:JavaCC: Do not edit this line. clike.java */
package traductor;
import java.io.*;
//...

public class clike implements clikeConstants {
        //...

    public static void main(String[] args) {
        clike parser = null;

        try {
                if(args.length == 0) {
                                parser = new clike(System.in);
                        }
                        else {
                    parser = new clike(new java.io.FileInputStream(args[0]));                   // 0 puede que sea el nombre del propio ejecutable, cuidado
                        }
                        //Programa es el símbolo inicial de la gramática
                        parser.Programa();
                        //...
                        System.out.println("***** An\u00e1lisis terminado con \u00e9xito *****");
                }
                catch (java.io.FileNotFoundException e) {
                        System.err.println ("Fichero " + args[0] + " no encontrado.");
                }
                catch (TokenMgrError e) {
                System.err.println("LEX_ERROR: " + e.getMessage());
        }
                catch (ParseException e) {
                        System.err.println("PARSE_ERROR: " + e.getMessage());
                }
                catch (Exception e) {
                        System.err.println("ERROR: " + e.getMessage());
                }
        //...
    }

//------------ Símbolo inicial de la gramática. Para análisis léxico no hace falta más
  static final public void Programa() throws ParseException {
    label_1:
    while (true) {
      declaracion();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tBOOL:
      case tCHAR:
      case tINT:
      case tVOID:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
    }
    jj_consume_token(0);
  }

  static final public void declaracion() throws ParseException {
 System.out.println("declaracion");
    if (jj_2_1(4)) {
      declaracion_variables();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tBOOL:
      case tCHAR:
      case tINT:
      case tVOID:
        declaracion_func_proc();
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void declaracion_variables() throws ParseException {
 System.out.println("declaracion variables");
    tipo();
    ids();
    jj_consume_token(tPC);
  }

  static final public void ids() throws ParseException {
    if (jj_2_2(2)) {
      jj_consume_token(tID);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tID:
        jj_consume_token(tID);
        jj_consume_token(tCOMMA);
        ids();
        break;
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void declaracion_func_proc() throws ParseException {
 System.out.println("declaracion procedimiento");
    tipo();
    jj_consume_token(tID);
    jj_consume_token(tAP);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tBOOL:
    case tCHAR:
    case tINT:
    case tVOID:
      parametros();
      break;
    default:
      jj_la1[3] = jj_gen;
      ;
    }
    jj_consume_token(tCP);
  }

  static final public void parametros() throws ParseException {
    if (jj_2_3(2)) {
      parametro();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tBOOL:
      case tCHAR:
      case tINT:
      case tVOID:
        parametro();
        jj_consume_token(tCOMMA);
        parametros();
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void parametro() throws ParseException {
    if (jj_2_4(2)) {
      tipo();
      jj_consume_token(tID);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tBOOL:
      case tCHAR:
      case tINT:
      case tVOID:
        tipo();
        jj_consume_token(tREFER);
        jj_consume_token(tID);
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void instruccion() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tREAD:
      inst_leer();
      jj_consume_token(tPC);
      break;
    case tREADLN:
      inst_leer_linea();
      jj_consume_token(tPC);
      break;
    default:
      jj_la1[6] = jj_gen;
      if (jj_2_5(3)) {
        inst_escribir();
        jj_consume_token(tPC);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case tPRINT:
          inst_escribir_linea();
          jj_consume_token(tPC);
          break;
        default:
          jj_la1[7] = jj_gen;
          if (jj_2_6(2)) {
            inst_invoc_proc();
            jj_consume_token(tPC);
          } else {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case tID:
              inst_asignacion();
              jj_consume_token(tPC);
              break;
            case tIF:
              inst_seleccion();
              break;
            case tWHILE:
              inst_iteracion();
              break;
            case tRETURN:
              inst_return();
              jj_consume_token(tPC);
              break;
            default:
              jj_la1[8] = jj_gen;
              jj_consume_token(-1);
              throw new ParseException();
            }
          }
        }
      }
    }
  }

  static final public void inst_leer() throws ParseException {
    jj_consume_token(tREAD);
    jj_consume_token(tAP);
    jj_consume_token(tID);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tCOMMA:
        ;
        break;
      default:
        jj_la1[9] = jj_gen;
        break label_2;
      }
      jj_consume_token(tCOMMA);
      jj_consume_token(tID);
    }
    jj_consume_token(tCP);
  }

  static final public void inst_leer_linea() throws ParseException {
    jj_consume_token(tREADLN);
    jj_consume_token(tAP);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tID:
      jj_consume_token(tID);
      break;
    default:
      jj_la1[10] = jj_gen;
      ;
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tCOMMA:
        ;
        break;
      default:
        jj_la1[11] = jj_gen;
        break label_3;
      }
      jj_consume_token(tCOMMA);
      jj_consume_token(tID);
    }
    jj_consume_token(tCP);
  }

  static final public void inst_escribir() throws ParseException {
    jj_consume_token(tPRINT);
    jj_consume_token(tAP);
    argumentos();
    jj_consume_token(tCP);
  }

  static final public void inst_escribir_linea() throws ParseException {
    jj_consume_token(tPRINT);
    jj_consume_token(tAP);
    argumentos();
    jj_consume_token(tCP);
  }

  static final public void argumentos() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tAP:
    case tMENOS:
    case tNOT:
    case tFALSE:
    case tTRUE:
    case tINT2CHAR:
    case tCHAR2INT:
    case tID:
    case tCONST_STRING:
    case tCONST_INT:
    case tCONST_CHAR:
      expresion();
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case tCOMMA:
          ;
          break;
        default:
          jj_la1[12] = jj_gen;
          break label_4;
        }
        jj_consume_token(tCOMMA);
        expresion();
      }
      break;
    case tEPSILON:
      jj_consume_token(tEPSILON);
      break;
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void inst_asignacion() throws ParseException {
    asignable();
    jj_consume_token(tASSIGN);
    expresion();
  }

  static final public void asignable() throws ParseException {
    jj_consume_token(tID);
  }

  static final public void inst_seleccion() throws ParseException {
    jj_consume_token(tIF);
    jj_consume_token(tAP);
    expresion();
    jj_consume_token(tCP);
    bloque();
    bloque_else_ifs();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tELSE:
      jj_consume_token(tELSE);
      bloque();
      break;
    default:
      jj_la1[14] = jj_gen;
      ;
    }
  }

  static final public void bloque_else_ifs() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tELSE:
      jj_consume_token(tELSE);
      jj_consume_token(tIF);
      jj_consume_token(tAP);
      expresion();
      jj_consume_token(tCP);
      bloque();
      bloque_else_ifs();
      break;
    case tEPSILON:
      jj_consume_token(tEPSILON);
      break;
    default:
      jj_la1[15] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void inst_iteracion() throws ParseException {
    jj_consume_token(tWHILE);
    jj_consume_token(tAP);
    expresion();
    jj_consume_token(tCP);
    bloque();
  }

  static final public void bloque() throws ParseException {
    jj_consume_token(tIBLOQUE);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tWHILE:
      case tIF:
      case tPRINT:
      case tREAD:
      case tREADLN:
      case tRETURN:
      case tID:
        ;
        break;
      default:
        jj_la1[16] = jj_gen;
        break label_5;
      }
      instruccion();
    }
    jj_consume_token(tFBLOQUE);
  }

  static final public void inst_return() throws ParseException {
    jj_consume_token(tRETURN);
    expresion();
  }

  static final public void inst_invoc_proc() throws ParseException {
    jj_consume_token(tID);
    jj_consume_token(tAP);
    argumentos();
    jj_consume_token(tCP);
  }

  static final public void operador_not() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tNOT:
      jj_consume_token(tNOT);
      break;
    case tMENOS:
      jj_consume_token(tMENOS);
      break;
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void expresion() throws ParseException {
    relacion();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tOR:
    case tAND:
      mas_relation();
      break;
    default:
      jj_la1[18] = jj_gen;
      ;
    }
  }

  static final public void mas_relation() throws ParseException {
    label_6:
    while (true) {
      and_or();
      relacion();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tOR:
      case tAND:
        ;
        break;
      default:
        jj_la1[19] = jj_gen;
        break label_6;
      }
    }
  }

  static final public void and_or() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tOR:
      jj_consume_token(tOR);
      break;
    case tAND:
      jj_consume_token(tAND);
      break;
    default:
      jj_la1[20] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void relacion() throws ParseException {
    expresion_simple();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tMEN:
    case tMAY:
    case tMENI:
    case tMAYI:
    case tDIF:
    case tIG:
      operador_relacional();
      expresion_simple();
      break;
    default:
      jj_la1[21] = jj_gen;
      ;
    }
  }

  static final public void operador_relacional() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tIG:
      jj_consume_token(tIG);
      break;
    case tMEN:
      jj_consume_token(tMEN);
      break;
    case tMAY:
      jj_consume_token(tMAY);
      break;
    case tMENI:
      jj_consume_token(tMENI);
      break;
    case tMAYI:
      jj_consume_token(tMAYI);
      break;
    case tDIF:
      jj_consume_token(tDIF);
      break;
    default:
      jj_la1[22] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void expresion_simple() throws ParseException {
    termino();
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tMAS:
      case tMENOS:
        ;
        break;
      default:
        jj_la1[23] = jj_gen;
        break label_7;
      }
      op_MAS_MENOS();
      termino();
    }
  }

  static final public void op_MAS_MENOS() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tMAS:
      jj_consume_token(tMAS);
      break;
    case tMENOS:
      jj_consume_token(tMENOS);
      break;
    default:
      jj_la1[24] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void tipo() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tINT:
      jj_consume_token(tINT);
      break;
    case tCHAR:
      jj_consume_token(tCHAR);
      break;
    case tBOOL:
      jj_consume_token(tBOOL);
      break;
    case tVOID:
      jj_consume_token(tVOID);
      break;
    default:
      jj_la1[25] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void termino() throws ParseException {
    factor();
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tPROD:
      case tDIV:
      case tMOD:
        ;
        break;
      default:
        jj_la1[26] = jj_gen;
        break label_8;
      }
      op_MULT();
      factor();
    }
  }

  static final public void op_MULT() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tPROD:
      jj_consume_token(tPROD);
      break;
    case tDIV:
      jj_consume_token(tDIV);
      break;
    case tMOD:
      jj_consume_token(tMOD);
      break;
    default:
      jj_la1[27] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void factor() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tAP:
    case tFALSE:
    case tTRUE:
    case tINT2CHAR:
    case tCHAR2INT:
    case tID:
    case tCONST_STRING:
    case tCONST_INT:
    case tCONST_CHAR:
      primario();
      break;
    case tMENOS:
    case tNOT:
      operador_not();
      primario();
      break;
    default:
      jj_la1[28] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void primario() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tAP:
      jj_consume_token(tAP);
      expresion();
      jj_consume_token(tCP);
      break;
    case tINT2CHAR:
      jj_consume_token(tINT2CHAR);
      jj_consume_token(tAP);
      expresion();
      jj_consume_token(tCP);
      break;
    case tCHAR2INT:
      jj_consume_token(tCHAR2INT);
      jj_consume_token(tAP);
      expresion();
      jj_consume_token(tCP);
      break;
    default:
      jj_la1[29] = jj_gen;
      if (jj_2_7(2)) {
        inst_invoc_proc();
      } else if (jj_2_8(2)) {
        jj_consume_token(tID);
        jj_consume_token(tACOR);
        expresion();
        jj_consume_token(tCCOR);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case tID:
          jj_consume_token(tID);
          break;
        case tCONST_INT:
          jj_consume_token(tCONST_INT);
          break;
        case tCONST_CHAR:
          jj_consume_token(tCONST_CHAR);
          break;
        case tCONST_STRING:
          jj_consume_token(tCONST_STRING);
          break;
        case tTRUE:
          jj_consume_token(tTRUE);
          break;
        case tFALSE:
          jj_consume_token(tFALSE);
          break;
        default:
          jj_la1[30] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }
